--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,7 @@
   /* Text colors */
   --text: hsl(0, 0%, 95%);
   --text-secondary: hsl(0, 0%, 70%);
+  --text-muted: var(--text-secondary);
   --text-tertiary: hsl(0, 0%, 55%);
 
   /* Border & dividers */
